[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/Kenney Rocket.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Nodes/GameScreen/GameScreen.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/Highway/Highway.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Kenney Blocks.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="GameScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Highway" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 273.518, 107.029 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 34.0109
margin_top = 18.5406
margin_right = 148.011
margin_bottom = 64.5406
rect_pivot_offset = Vector2( -436.488, -8.95446 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="."]
margin_left = 34.0109
margin_top = 83.7843
margin_right = 148.011
margin_bottom = 129.784
rect_pivot_offset = Vector2( -436.488, -8.95446 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverPopup" type="PopupDialog" parent="."]
pause_mode = 2
visible = true
margin_left = 34.0109
margin_top = 18.5406
margin_right = 569.011
margin_bottom = 575.541
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="GameOverPopup"]
margin_left = 164.217
margin_top = 294.531
margin_right = 336.217
margin_bottom = 346.531
custom_fonts/font = SubResource( 2 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="GameOverPopup"]
margin_left = 193.882
margin_top = 461.926
margin_right = 296.882
margin_bottom = 513.926
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="GameOverPopup"]
margin_left = 145.146
margin_top = 379.288
margin_right = 361.146
margin_bottom = 431.288
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="GameOverLabel" type="Label" parent="GameOverPopup"]
margin_left = 145.146
margin_top = 33.9029
margin_right = 354.146
margin_bottom = 65.9029
custom_fonts/font = SubResource( 3 )
text = "Game Over"

[node name="GameOverScoreLabel" type="Label" parent="GameOverPopup"]
margin_left = 193.882
margin_top = 133.492
margin_right = 318.882
margin_bottom = 165.492
custom_fonts/font = SubResource( 3 )
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tree_entered" from="." to="." method="_on_GameScreen_tree_entered"]
[connection signal="button_up" from="GameOverPopup/RestartButton" to="." method="_on_RestartButton_button_up"]
[connection signal="button_up" from="GameOverPopup/QuitButton" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="GameOverPopup/MainMenuButton" to="." method="_on_MainMenuButton_button_up"]
